[gd_scene load_steps=2 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="HealthContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 270.0
offset_bottom = 50.0
mouse_filter = 2

[node name="HealthBarBG" type="ColorRect" parent="HealthContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="HealthBarDamage" type="ColorRect" parent="HealthContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 2.0
offset_bottom = 28.0
mouse_filter = 2
color = Color(1, 0.2, 0.3, 1)

[node name="HealthBar" type="ColorRect" parent="HealthContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_top = 2.0
offset_bottom = 28.0
mouse_filter = 2
color = Color(0, 0.9, 0.8, 1)

[node name="HealthLabel" type="Label" parent="HealthContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 12
text = "100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MomentumContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="MomentumBarBG" type="ColorRect" parent="MomentumContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.05, 0.15, 0.8)

[node name="MomentumBar" type="ColorRect" parent="MomentumContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.4, 0.8, 1)

[node name="MomentumThresholds" type="Control" parent="MomentumContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Threshold25" type="ColorRect" parent="MomentumContainer/MomentumThresholds"]
layout_mode = 0
offset_left = 100.0
offset_top = 2.0
offset_right = 101.0
offset_bottom = 28.0
mouse_filter = 2
color = Color(1, 1, 1, 0.3)

[node name="Threshold50" type="ColorRect" parent="MomentumContainer/MomentumThresholds"]
layout_mode = 0
offset_left = 200.0
offset_top = 2.0
offset_right = 201.0
offset_bottom = 28.0
mouse_filter = 2
color = Color(1, 1, 1, 0.3)

[node name="Threshold75" type="ColorRect" parent="MomentumContainer/MomentumThresholds"]
layout_mode = 0
offset_left = 300.0
offset_top = 2.0
offset_right = 301.0
offset_bottom = 28.0
mouse_filter = 2
color = Color(1, 1, 1, 0.3)

[node name="EchoContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -90.0
offset_right = 25.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="EchoBG" type="ColorRect" parent="EchoContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.1, 0.15, 0.8)

[node name="EchoCooldown" type="ColorRect" parent="EchoContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -35.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
color = Color(0, 0.8, 1, 0.8)

[node name="EchoIcon" type="Label" parent="EchoContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
theme_override_font_sizes/font_size = 18
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboCounter" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
mouse_filter = 2
theme_override_colors/font_color = Color(1, 0.4, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2
vertical_alignment = 1

[node name="DamageNumbers" type="Node2D" parent="."]
unique_name_in_owner = true
